--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
     <h1>Odin Recipes</h1>
+
+    <a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie Recipe</a>
     
 </body>
 </html>
