--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -8,6 +8,12 @@
 <body>
 
     <h1>Chicken Pot Pie Recipe</h1>
+
+    <img src="../images/chicken-pot-pie.webp" alt="Chicken Pot Pie Image">
+
+    <h2>Description</h2>
+
+    <p>A delicious chicken pie made from scratch with carrots, peas, and celery in a pre-made crust. Add thyme and poultry seasoning for more flavor.</p>
     
 </body>
 </html>
