Update the title tag
Forgot to update the title tag with the correct value

--- a/recipes/beef-tips-and-tots.html
+++ b/recipes/beef-tips-and-tots.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicken Pot Pie Recipe</title>
+    <title>Beef Tips and Tots Recipe</title>
 </head>
 <body>
 
