--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie Recipe</a>
+    <ul>
+        <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie Recipe</a></li>
+        <li><a href="./recipes/beef-tips-and-tots.html">Beef Tips and Tots Recipe</a></li>
+        <li><a href="./recipes/turkey-goulash.html">Turkey Goulash Recipe</a></li>
+    </ul>
     
 </body>
 </html>
