Update html and css file for improvement

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Odin Recipes</h1>
+    <main class="main">
 
-    <ul>
-        <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie Recipe</a></li>
-        <li><a href="./recipes/beef-tips-and-tots.html">Beef Tips and Tots Recipe</a></li>
-        <li><a href="./recipes/turkey-goulash.html">Turkey Goulash Recipe</a></li>
-    </ul>
+        <h1>Odin Recipes</h1>
+
+        <ul class="featured-recipe">
+            <li><a href="./recipes/chicken-pot-pie.html">Chicken Pot Pie Recipe</a></li>
+            <li><a href="./recipes/beef-tips-and-tots.html">Beef Tips and Tots Recipe</a></li>
+            <li><a href="./recipes/turkey-goulash.html">Turkey Goulash Recipe</a></li>
+        </ul>
+
+    </main>
+    
     
 </body>
 </html>
