--- a/recipes/chicken-pot-pie.html
+++ b/recipes/chicken-pot-pie.html
@@ -4,48 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Pot Pie Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-    <h1>Chicken Pot Pie Recipe</h1>
+    <main>
 
-    <img src="../images/chicken-pot-pie.webp" alt="Chicken Pot Pie Image">
+        <h1>Chicken Pot Pie Recipe</h1>
 
-    <h2>Description</h2>
+        <img src="../images/chicken-pot-pie.webp" alt="Chicken Pot Pie Image">
 
-    <p>A delicious chicken pie made from scratch with carrots, peas, and celery in a pre-made crust. Add thyme and poultry seasoning for more flavor.</p>
+        <h2>Description</h2>
 
-    <h2>Ingredients</h2>
+        <p>A delicious chicken pie made from scratch with carrots, peas, and celery in a pre-made crust. Add thyme and poultry seasoning for more flavor.</p>
 
-    <ul>
-        <li>1 pound skinless, boneless chicken breast halves - cubed</li>
-        <li>1 cup sliced carrots</li>
-        <li>1 cup frozen green peas</li>
-        <li>½ cup sliced celery</li>
-        <li>⅓ cup butter</li>
-        <li>⅓ cup chopped onion</li>
-        <li>⅓ cup all-purpose flour</li>
-        <li>½ teaspoon salt</li>
-        <li>¼ teaspoon black pepper</li>
-        <li>¼ teaspoon celery seed</li>
-        <li>1 ¾ cups chicken broth</li>
-        <li>⅔ cup milk</li>
-        <li>2 (9 inch) unbaked pie crusts</li>
-    </ul>
+        <h2>Ingredients</h2>
 
-    <h2>Steps</h2>
+        <ul class="list">
+            <li>1 pound skinless, boneless chicken breast halves - cubed</li>
+            <li>1 cup sliced carrots</li>
+            <li>1 cup frozen green peas</li>
+            <li>½ cup sliced celery</li>
+            <li>⅓ cup butter</li>
+            <li>⅓ cup chopped onion</li>
+            <li>⅓ cup all-purpose flour</li>
+            <li>½ teaspoon salt</li>
+            <li>¼ teaspoon black pepper</li>
+            <li>¼ teaspoon celery seed</li>
+            <li>1 ¾ cups chicken broth</li>
+            <li>⅔ cup milk</li>
+            <li>2 (9 inch) unbaked pie crusts</li>
+        </ul>
 
-    <ol>
-        <li>Gather all ingredients and preheat the oven to 425 degrees F (220 degrees C.)</li>
-        <li>Combine chicken, carrots, peas, and celery in a saucepan; add water to cover and bring to a boil. Boil for 15 minutes, then remove from the heat and drain.</li>
-        <li>While the chicken is cooking, melt butter in another saucepan over medium heat. Add onion and cook until soft and translucent, 5 to 7 minutes. Stir in flour, salt, pepper, and celery seed.</li>
-        <li>Slowly stir in chicken broth and milk.</li>
-        <li>Reduce heat to medium-low and simmer until thick, 5 to 10 minutes. Remove from heat and set aside.</li>
-        <li>Place chicken and vegetables in the bottom pie crust. Pour hot liquid mixture over top.</li>
-        <li>Cover with top crust, seal the edges, and cut away any excess dough. Make several small slits in the top crust to allow steam to escape.</li>
-        <li>Bake in the preheated oven until pastry is golden brown and filling is bubbly, 30 to 35 minutes. Cool for 10 minutes before serving.</li>
-        <li>Serve immediately and enjoy!</li>
-    </ol>
+        <h2>Steps</h2>
+
+        <ol class="list">
+            <li>Gather all ingredients and preheat the oven to 425 degrees F (220 degrees C.)</li>
+            <li>Combine chicken, carrots, peas, and celery in a saucepan; add water to cover and bring to a boil. Boil for 15 minutes, then remove from the heat and drain.</li>
+            <li>While the chicken is cooking, melt butter in another saucepan over medium heat. Add onion and cook until soft and translucent, 5 to 7 minutes. Stir in flour, salt, pepper, and celery seed.</li>
+            <li>Slowly stir in chicken broth and milk.</li>
+            <li>Reduce heat to medium-low and simmer until thick, 5 to 10 minutes. Remove from heat and set aside.</li>
+            <li>Place chicken and vegetables in the bottom pie crust. Pour hot liquid mixture over top.</li>
+            <li>Cover with top crust, seal the edges, and cut away any excess dough. Make several small slits in the top crust to allow steam to escape.</li>
+            <li>Bake in the preheated oven until pastry is golden brown and filling is bubbly, 30 to 35 minutes. Cool for 10 minutes before serving.</li>
+            <li>Serve immediately and enjoy!</li>
+        </ol>
+
+    </main>
     
 </body>
 </html>
